cdk.out/Vpc.template.json
{
  "Resources": {
    "Vpc1C211860B": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Vpc/Vpc1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc1/Resource"
      }
    },
    "Vpc1PublicSubnet1SubnetA38B5196": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/18",
        "VpcId": {
          "Ref": "Vpc1C211860B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "Vpc/Vpc1/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc1/PublicSubnet1/Subnet"
      }
    },
    "Vpc1PublicSubnet1RouteTable7CD3463B": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc1C211860B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Vpc/Vpc1/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc1/PublicSubnet1/RouteTable"
      }
    },
    "Vpc1PublicSubnet1RouteTableAssociation0DA89392": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "Vpc1PublicSubnet1RouteTable7CD3463B"
        },
        "SubnetId": {
          "Ref": "Vpc1PublicSubnet1SubnetA38B5196"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc1/PublicSubnet1/RouteTableAssociation"
      }
    },
    "Vpc1PublicSubnet1DefaultRouteD017B509": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "Vpc1PublicSubnet1RouteTable7CD3463B"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "Vpc1IGW15AE5E6B"
        }
      },
      "DependsOn": [
        "Vpc1VPCGW4C1BD07A"
      ],
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc1/PublicSubnet1/DefaultRoute"
      }
    },
    "Vpc1PublicSubnet2Subnet9A232F02": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/18",
        "VpcId": {
          "Ref": "Vpc1C211860B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "Vpc/Vpc1/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc1/PublicSubnet2/Subnet"
      }
    },
    "Vpc1PublicSubnet2RouteTable845CC89F": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc1C211860B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Vpc/Vpc1/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc1/PublicSubnet2/RouteTable"
      }
    },
    "Vpc1PublicSubnet2RouteTableAssociationC2021359": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "Vpc1PublicSubnet2RouteTable845CC89F"
        },
        "SubnetId": {
          "Ref": "Vpc1PublicSubnet2Subnet9A232F02"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc1/PublicSubnet2/RouteTableAssociation"
      }
    },
    "Vpc1PublicSubnet2DefaultRoute1057C1D6": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "Vpc1PublicSubnet2RouteTable845CC89F"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "Vpc1IGW15AE5E6B"
        }
      },
      "DependsOn": [
        "Vpc1VPCGW4C1BD07A"
      ],
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc1/PublicSubnet2/DefaultRoute"
      }
    },
    "Vpc1IsolatedSubnet1Subnet41898916": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/18",
        "VpcId": {
          "Ref": "Vpc1C211860B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "Vpc/Vpc1/IsolatedSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc1/IsolatedSubnet1/Subnet"
      }
    },
    "Vpc1IsolatedSubnet1RouteTable85CC0284": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc1C211860B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Vpc/Vpc1/IsolatedSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc1/IsolatedSubnet1/RouteTable"
      }
    },
    "Vpc1IsolatedSubnet1RouteTableAssociation5CB6A296": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "Vpc1IsolatedSubnet1RouteTable85CC0284"
        },
        "SubnetId": {
          "Ref": "Vpc1IsolatedSubnet1Subnet41898916"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc1/IsolatedSubnet1/RouteTableAssociation"
      }
    },
    "Vpc1IsolatedSubnet2SubnetE973B126": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.192.0/18",
        "VpcId": {
          "Ref": "Vpc1C211860B"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "Vpc/Vpc1/IsolatedSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc1/IsolatedSubnet2/Subnet"
      }
    },
    "Vpc1IsolatedSubnet2RouteTable43B12B6D": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc1C211860B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Vpc/Vpc1/IsolatedSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc1/IsolatedSubnet2/RouteTable"
      }
    },
    "Vpc1IsolatedSubnet2RouteTableAssociation6394B926": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "Vpc1IsolatedSubnet2RouteTable43B12B6D"
        },
        "SubnetId": {
          "Ref": "Vpc1IsolatedSubnet2SubnetE973B126"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc1/IsolatedSubnet2/RouteTableAssociation"
      }
    },
    "Vpc1IGW15AE5E6B": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Vpc/Vpc1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc1/IGW"
      }
    },
    "Vpc1VPCGW4C1BD07A": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc1C211860B"
        },
        "InternetGatewayId": {
          "Ref": "Vpc1IGW15AE5E6B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc1/VPCGW"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WPQQ+CMAyFfwv3MQU9eJRwMHoiaLyaUUqc4Ga2DmII/92hxJ36+r32NU14st3xdbQXg42hblcjaIN8PJOAlpVotTOALNfKknFALG9UoI3yRi1JajWxOQEh5eP1BbN1LXJWuKqTcHaVwu9qUKV2hBdRdRh4YJm1GqSYg//DrDCyF4Qh46gIjdcHTwfxXo4uXUb+hfsTFU0TO4lerBLuP71t0jR6WClj4xTJJ/LyVz+P3NKdCgEAAA=="
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/CDKMetadata/Default"
      },
      "Condition": "CDKMetadataAvailable"
    }
  },
  "Conditions": {
    "CDKMetadataAvailable": {
      "Fn::Or": [
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "af-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ca-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-northwest-1"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-3"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "me-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "sa-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-2"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-2"
              ]
            }
          ]
        }
      ]
    }
  },
  "Outputs": {
    "ExportsOutputRefVpc1PublicSubnet1SubnetA38B51968C40ECD8": {
      "Value": {
        "Ref": "Vpc1PublicSubnet1SubnetA38B5196"
      },
      "Export": {
        "Name": "Vpc:ExportsOutputRefVpc1PublicSubnet1SubnetA38B51968C40ECD8"
      }
    },
    "ExportsOutputRefVpc1PublicSubnet2Subnet9A232F02CD3AED0E": {
      "Value": {
        "Ref": "Vpc1PublicSubnet2Subnet9A232F02"
      },
      "Export": {
        "Name": "Vpc:ExportsOutputRefVpc1PublicSubnet2Subnet9A232F02CD3AED0E"
      }
    },
    "ExportsOutputRefVpc1C211860B64169B74": {
      "Value": {
        "Ref": "Vpc1C211860B"
      },
      "Export": {
        "Name": "Vpc:ExportsOutputRefVpc1C211860B64169B74"
      }
    }
  }
}
